data/derived/comb/progs/unify/prog0486.ml.out
Characters 25-26:
  let _ = bigAdd ( (bigAdd 2 4) (mulByDigit (i-2) l) );;
                           ^
Error: This expression has type int but an expression was expected of type
         int list
